# learning-spark

./: README.md  main.py  pyproject.toml  spark.docx  test.py
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
00_basics/: read-write.ipynb
01_basics/: read-write.ipynb  starting.ipynb
01_data_preprocessing/: data_preprocessing.ipynb
02_feature_store/: feature_store.ipynb
03_down_stream_from_feature_store/: feast_example.ipynb
03_down_stream_from_feature_store/metastore_db/: db.lck  service.properties
03_down_stream_from_feature_store/metastore_db/log/: logmirror.ctrl
04_modelling/: modelling.ipynb
04_modelling/metastore_db/: db.lck  service.properties
04_modelling/metastore_db/log/: log.ctrl
05_inference/: predict.ipynb
configs/: paths.py
data/Customer-Churn.parquet/: .part-00000-3167d8fb-85d5-4cca-91d3-d88006395cf3-c000.snappy.parquet.crc  part-00000-3167d8fb-85d5-4cca-91d3-d88006395cf3-c000.snappy.parquet
data/bronze/customer_churn_bronze/: .part-00000-0760dc4d-9000-42d0-b278-576768b9bed4-c000.snappy.parquet.crc  part-00000-0760dc4d-9000-42d0-b278-576768b9bed4-c000.snappy.parquet
data/gold/customer_churn_gold/: .part-00000-31c098fd-3ee4-4669-844a-c6a12d9f3a80-c000.snappy.parquet.crc  .part-00000-5fdd0241-0358-4bde-9381-0c9d59c014d7-c000.snappy.parquet.crc  .part-00000-6b44500a-1da6-4486-b738-0ca1ffb6cd42-c000.snappy.parquet.crc  part-00000-31c098fd-3ee4-4669-844a-c6a12d9f3a80-c000.snappy.parquet  part-00000-5fdd0241-0358-4bde-9381-0c9d59c014d7-c000.snappy.parquet  (+1 more)
utils/: spark_config.py
(+52 files in other folders)
